@@ -6,6 +6,10 @@
     <epp:phrase id="dynamic:logged_in">Logged in as <epc:pin name="user"/> <epc:phrase ref="Plugin/Screen:tool_divide" /> 
        <epc:pin name="tools" /> <epc:phrase ref="Plugin/Screen:tool_divide" /> <a href="{$config{http_cgiurl}}/logout">Logout</a> 
     </epp:phrase>
+	<epp:phrase id="dynamic:logged_in_header"><script type="text/javascript" src="{$config{rel_path}}/javascript/logged_in.js"><!-- padder --></script>
+	<style type="text/css">@import url(<epc:print expr="$config{rel_path}"/>/style/logged_in.css);</style></epp:phrase>
     <epp:phrase id="dynamic:not_logged_in"><a href="{$config{userhome}}">Login</a> <epc:phrase ref="Plugin/Screen:tool_divide" /> <a href="{$config{http_cgiurl}}/register">Create Account</a></epp:phrase>
+	<epp:phrase id="dynamic:not_logged_in_header"><script type="text/javascript" src="{$config{rel_path}}/javascript/not_logged_in.js"><!-- padder --></script>
+	<style type="text/css">@import url(<epc:print expr="$config{rel_path}"/>/style/not_logged_in.css);</style></epp:phrase>
 
 </epp:phrases>
