@@ -1,0 +1,1 @@
+var eprints_logged_in = false;
